Fix layout issue and add edit toggle button

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -244,6 +245,7 @@ background-color: rgb(241, 240, 240);
   width: 100%;
 }
 
+
 .footer-links {
   display: flex;
   justify-content: space-around;
@@ -271,12 +273,23 @@ background-color: rgb(241, 240, 240);
 
 
              /* Leads Page Css */
-
+.main-container {
+  padding-bottom: 60px; 
+}
+.buying-cards-container{
+   padding-bottom: 65px;
+}
+.team-cards-wrapper{
+  padding-bottom: 65px;
+}
 .buttons-group {
   padding: 20px;
   display: flex;
+  overflow-x: auto;
   flex-wrap: wrap;
   gap: 12px;
+    -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
   justify-content: flex-start;
 }
 .full-card .card-title {
@@ -295,6 +308,7 @@ background-color: rgb(241, 240, 240);
   margin: 3px;
   padding: 0;
   font-size: 16px;
+  
 }
 .buttons-group .btn {
   border: 1px solid #d0c9f0;
@@ -319,12 +333,13 @@ background-color: rgb(241, 240, 240);
 
 
 .search-form {
-  width: 90%;
-  max-width: 800px;
-  margin: 15px auto;
+  width: 80%;
+  max-width: 700px;
+  margin: 10px 4px;
+  padding-left: 2px;
   display: flex;
-  align-items: center;
-  gap: 8px;
+  /* align-items: center; */
+  gap: 6px;
 }
 
 .search-form input {
@@ -362,10 +377,10 @@ background-color: rgb(241, 240, 240);
   margin: 8px auto !important;       
   padding: 5px!important;
   max-width: 850px;
-  width: 90%;
+  width: 100%;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   transition: all 0.25s ease-in-out;
-  box-sizing: border-box;   
+  box-sizing: border-box;    
 }
 
 
@@ -766,7 +781,7 @@ input:checked + .slider:before {
   border-collapse: collapse;
   width: 100%;
   max-width: 850px;
-
+  margin-bottom: 20px;
   background: #fff;
   border-radius: 12px;
   overflow: hidden;
@@ -778,6 +793,7 @@ input:checked + .slider:before {
   border: none;
   padding: 14px 16px;
   font-size: 15px;
+  
   color: #333;
 }
 
@@ -849,6 +865,10 @@ input:checked + .slider:before {
   font-weight: bold;
   cursor: pointer;
 }
+.popup.active {
+  bottom: 0;
+}
+
 
 .popup {
   position: fixed;
@@ -875,18 +895,19 @@ input:checked + .slider:before {
 .popup-btn{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 
 
 .popup-content .left {
-  font-size: 26px;
+  font-size: 20px;
   cursor: pointer;
   color: #444;
 }
 
 .popup-content .right {
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
   color: #444;
 }
@@ -895,6 +916,7 @@ input:checked + .slider:before {
   margin-top: 10px;
   margin-bottom: 16px;
   font-size: 18px;
+  font-weight: 500;
   color: #333;
   text-align: center;
 }
@@ -906,7 +928,7 @@ input:checked + .slider:before {
 }
 
 .popup-content ul li {
-  padding: 12px;
+  padding: 20px;
   font-size: 16px;
   color: #333;
   display: flex;
@@ -1024,8 +1046,11 @@ input:checked + .slider:before {
   }
 
   .full-card {
+    width: 100%;
+    max-width: 850px;
     margin: 8px 0px;
     padding: 10px;
+    width: 94%;
   }
 
   .full-card i {
@@ -1085,6 +1110,10 @@ input:checked + .slider:before {
   .team-card__number {
     font-size: 15px;
   }
+  .popup{
+        width: 90%;
+        
+  }
 }
 
 
@@ -1135,10 +1164,15 @@ input:checked + .slider:before {
     font-size: 14px;
   }
 
-  .buying-card,
+  
   .team-card,
   .full-card {
     margin: 20px;
+    padding: 12px;
+    font-size: 14px;
+  }
+  .buying-card{
+     margin: 8px 20px;
     padding: 12px;
     font-size: 14px;
   }
@@ -1158,6 +1192,10 @@ input:checked + .slider:before {
     height: 35px;
     padding: 1px 6px;
   }
+  .search-form{
+    width: 100%;
+    margin: 20px auto;
+  }
 }
 
 /* ===== Laptops up to 1024px ===== */
@@ -1169,6 +1207,7 @@ input:checked + .slider:before {
     overflow-x: auto;         
     -webkit-overflow-scrolling: touch;
   }
+  
   
   
   .buttons-group::-webkit-scrollbar {
